--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
       - name: nginx
         image: bvvinay/highway:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
 
