--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,23 +16,21 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: bvvinay/highway:latest
-        imagePullPolicy: Always
+        image: nginx:latest
         ports:
         - containerPort: 80
 
 ---
 
-apiVersion: v1
-kind: Service
-metadata:
-  name: my-nodeport-service
-spec:
-  type: NodePort
-  selector:
-    app: nginx
-  ports:
-    - protocol: TCP
-      port: 80        # Service port
-      targetPort: 80 # Container port
-      nodePort: 30007 
+    kind: Service
+    apiVersion: v1
+    metadata:
+      name: my-loadbalancer-service
+    spec:
+      type: LoadBalancer
+      selector:
+        app: nginx
+      ports:
+        - protocol: TCP
+          port: 80
+          targetPort: 80
